#200 [core] Migrate to Java 21